--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Мой облачный проект</title>
+    <style>
+        body { font-family: sans-serif; display: flex; justify-content: center; padding: 50px; background-color: #f4f4f9; }
+        .form-container { background: white; padding: 25px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 300px; }
+        input { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px; box-sizing: border-box; }
+        button { width: 100%; padding: 10px; background: #4b4000; border: none; color: white; font-weight: bold; cursor: pointer; border-radius: 5px; }
+        button:hover { background: #df4a00; }
+    </style>
+</head>
+<body>
 
+<div class="form-container">
+    <h3>Отправить заявку</h3>
+    <form id="feedbackForm">
+        <input type="text" id="userName" placeholder="Ваше имя" required>
+        <input type="email" id="userEmail" placeholder="Ваш Email" required>
+        <button type="submit">Отправить в облако</button>
+    </form>
+</div>
+
+  <script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
+
+const firebaseConfig = {
+apiKey: "AIzaSyCkrPyMifyTKSTQ5r4q8bIstQUXkR-DJfY",
+  authDomain: "project-madi-po234.firebaseapp.com",
+  projectId: "project-madi-po234",
+  storageBucket: "project-madi-po234.firebasestorage.app",
+  messagingSenderId: "725386474826",
+  appId: "1:725386474826:web:e86f7d89112078ade13db3",
+  measurementId: "G-S5GCVT0BPF"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const nameInput = document.getElementById("userName").value;
+  const emailInput = document.getElementById("userEmail").value;
+
+  try {
+    await addDoc(collection(db, "requests"), {
+      name: nameInput,
+      email: emailInput,
+
+      };
+
+// Инициализация
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+// Логика кнопки
+document.getElementById("feedbackForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const nameInput = document.getElementById("userName").value;
+  const emailInput = document.getElementById("userEmail").value;
+
+  try {
+    // Запись в коллекцию "requests"
+    await addDoc(collection(db, "requests"), {
+      name: nameInput,
+      email: emailInput,
+      timestamp: new Date()
+    });
+
+    alert("Готово! Данные сохранены в Firebase.");
+    document.getElementById("feedbackForm").reset();
+  } catch (error) {
+    console.error("Ошибка записи: ", error);
+    alert("Ошибка при отправке.");
+  }
+});
+</script>
+</body>
+</html>
