--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebas
 import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
 
 const firebaseConfig = {
-apiKey: "AIzaSyCkrPyMifyTKSTQ5r4q8bIstQUXkR-DJfY",
-  authDomain: "project-madi-po234.firebaseapp.com",
-  projectId: "project-madi-po234",
-  storageBucket: "project-madi-po234.firebasestorage.app",
-  messagingSenderId: "725386474826",
-  appId: "1:725386474826:web:e86f7d89112078ade13db3",
-  measurementId: "G-S5GCVT0BPF"
+ apiKey: "AIzaSyCQsBDdxkA4dWhaTM6w9_jzzmEkZbh1Y4A",
+  authDomain: "project-3574e.firebaseapp.com",
+  projectId: "project-3574e",
+  storageBucket: "project-3574e.firebasestorage.app",
+  messagingSenderId: "173194596075",
+  appId: "1:173194596075:web:27a2ba28b0adac358978ae",
 };
 
 const app = initializeApp(firebaseConfig);
