--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             flex-direction: column;
             align-items: center;
             padding: 20px;
+            min-height: 100vh;
         }
 
         .container {
@@ -20,7 +21,7 @@
             background: white;
             padding: 25px;
             border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             margin-bottom: 20px;
         }
 
@@ -32,7 +33,7 @@
             display: flex;
             align-items: center;
             gap: 15px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
         .user-avatar {
@@ -42,13 +43,20 @@
             border: 2px solid #007bff;
         }
 
-        input {
+        input, select, button {
             width: 100%;
             padding: 12px;
             margin: 8px 0;
             border: 1px solid #ddd;
             border-radius: 6px;
             box-sizing: border-box;
+            font-size: 14px;
+        }
+
+        input:focus, select:focus, button:focus {
+            border-color: #007bff;
+            outline: none;
+            transition: border-color 0.3s;
         }
 
         button {
@@ -60,10 +68,11 @@
             width: 100%;
             font-weight: 600;
             cursor: pointer;
+            transition: background 0.3s;
         }
 
         button:hover {
-            background: #0065b3;
+            background: #0056b3;
         }
 
         button:disabled {
@@ -75,6 +84,7 @@
             padding: 8px 15px;
             width: auto;
             font-size: 14px;
+            border-radius: 6px;
         }
 
         .post {
@@ -85,6 +95,7 @@
             border-radius: 8px;
             width: 100%;
             max-width: 500px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
 
         .post-header {
@@ -107,12 +118,18 @@
             padding: 5px 12px;
             border-radius: 20px;
             margin-top: 10px;
+            font-size: 14px;
         }
 
         .time {
             font-size: 11px;
             color: #999;
             margin-left: auto;
+        }
+
+        .upload-btn {
+            background: #28a745;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -137,7 +154,7 @@
 
     <!-- Поле для загрузки изображения -->
     <input type="file" id="imageInput" accept="image/*">
-    <button id="uploadImageBtn">Загрузить изображение</button>
+    <button id="uploadImageBtn" class="upload-btn">Загрузить изображение</button>
 
     <div id="feed" style="width: 100%; max-width: 500px;"></div>
 
