--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Облачное приложение</title>
+    <title>Чат</title>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -75,10 +75,6 @@
             background: #0056b3;
         }
 
-        button:disabled {
-            background: #ccc;
-        }
-
         .logout-btn {
             background: #f4f7f6;
             padding: 8px 15px;
@@ -126,11 +122,6 @@
             color: #999;
             margin-left: auto;
         }
-
-        .upload-btn {
-            background: #28a745;
-            margin-top: 10px;
-        }
     </style>
 </head>
 <body>
@@ -151,10 +142,6 @@
     <input type="email" id="email" placeholder="Ваш Email" readonly>
     <input type="text" id="content" placeholder="Что у вас нового?">
     <button id="postBtn">Опубликовать в облаках</button>
-
-    <!-- Поле для загрузки изображения -->
-    <input type="file" id="imageInput" accept="image/*">
-    <button id="uploadImageBtn" class="upload-btn">Загрузить изображение</button>
 
     <div id="feed" style="width: 100%; max-width: 500px;"></div>
 
