--- a/index.html
+++ b/index.html
@@ -53,12 +53,6 @@
             font-size: 14px;
         }
 
-        input:focus, select:focus, button:focus {
-            border-color: #007bff;
-            outline: none;
-            transition: border-color 0.3s;
-        }
-
         button {
             background: #007bff;
             color: white;
@@ -68,19 +62,14 @@
             width: 100%;
             font-weight: 600;
             cursor: pointer;
-            transition: background 0.3s;
         }
 
         button:hover {
             background: #0056b3;
         }
 
-        .logout-btn {
-            background: #f4f7f6;
-            padding: 8px 15px;
-            width: auto;
-            font-size: 14px;
-            border-radius: 6px;
+        button:disabled {
+            background: #ccc;
         }
 
         .post {
@@ -107,20 +96,20 @@
             border-radius: 50%;
         }
 
-        .like-btn {
-            cursor: pointer;
-            border: none;
-            background: #f8f9fa;
-            padding: 5px 12px;
-            border-radius: 20px;
-            margin-top: 10px;
-            font-size: 14px;
-        }
-
         .time {
             font-size: 11px;
             color: #999;
             margin-left: auto;
+        }
+
+        .chat-controls {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+        }
+
+        .message-box {
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -135,26 +124,20 @@
     </div>
 
     <div id="messageForm" class="container" style="display: none;">
-        <h3>Создать запись</h3>
-        <input type="text" id="name" placeholder="Имя профиля" readonly>
+        <h3>Чат</h3>
+        <input type="text" id="content" placeholder="Введите сообщение">
+        <button id="sendMessageBtn">Отправить</button>
     </div>
-
-    <input type="email" id="email" placeholder="Ваш Email" readonly>
-    <input type="text" id="content" placeholder="Что у вас нового?">
-    <button id="postBtn">Опубликовать в облаках</button>
 
     <div id="feed" style="width: 100%; max-width: 500px;"></div>
 
-    <!-- Поле выбора собеседника -->
-    <select id="selectUser">
-      <option value="user1">Пользователь 1</option>
-      <option value="user2">Пользователь 2</option>
-    </select>
-    <button id="startChatBtn">Начать чат</button>
-
-    <!-- Поле для ввода сообщения -->
-    <input type="text" id="messageInput" placeholder="Введите сообщение">
-    <button id="sendMessageBtn">Отправить</button>
+    <div id="chatControls" class="container" style="display: none;">
+        <select id="selectUser">
+            <option value="user1">Пользователь 1</option>
+            <option value="user2">Пользователь 2</option>
+        </select>
+        <button id="startChatBtn">Начать чат</button>
+    </div>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
@@ -176,11 +159,11 @@
   const auth = getAuth(app);
   const provider = new GoogleAuthProvider();
 
-  // --- Логика авторизации ---
   const loginBtn = document.getElementById('loginBtn');
   const logoutBtn = document.getElementById('logoutBtn');
   const userInfo = document.getElementById('userInfo');
   const messageForm = document.getElementById('messageForm');
+  const chatControls = document.getElementById('chatControls');
 
   loginBtn.onclick = () => signInWithPopup(auth, provider);
   logoutBtn.onclick = () => signOut(auth);
@@ -190,18 +173,18 @@
       loginBtn.style.display = 'none';
       userInfo.style.display = 'flex';
       messageForm.style.display = 'block';
+      chatControls.style.display = 'block';
       document.getElementById('userName').innerText = user.displayName;
       document.getElementById('userPhoto').src = user.photoURL;
-      document.getElementById('name').value = user.displayName;
-      document.getElementById('email').value = user.email;
     } else {
       loginBtn.style.display = 'block';
       userInfo.style.display = 'none';
       messageForm.style.display = 'none';
+      chatControls.style.display = 'none';
     }
   });
 
-  // --- Логика для создания чатов и отправки сообщений ---
+  // --- Логика для чатов и отправки сообщений ---
   const createChat = async (user1, user2, message) => {
     const chatRef = collection(db, "chats");
     const q = query(chatRef, where("participants", "array-contains", user1), where("participants", "array-contains", user2));
@@ -230,14 +213,14 @@
   };
 
   document.getElementById("sendMessageBtn").onclick = async () => {
-    const content = document.getElementById("messageInput").value;
+    const content = document.getElementById("content").value;
     const recipientId = document.getElementById("selectUser").value;
 
     if (!content) return alert("Введите текст сообщения!");
 
     try {
       await createChat(auth.currentUser.uid, recipientId, content);
-      document.getElementById("messageInput").value = "";  // Очищаем поле
+      document.getElementById("content").value = "";  // Очищаем поле
     } catch (e) {
       alert("Ошибка безопасности! Проверьте правила (Rules) в Firebase.");
     }
