--- a/index.html
+++ b/index.html
@@ -1,276 +1,131 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Чат</title>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #f4f7f6;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            min-height: 100vh;
-        }
+  <meta charset="UTF-8">
+  <title>Firebase Chat</title>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
+  <style>
+    body {
+      font-family: Arial;
+      background: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      padding-top: 50px;
+    }
 
-        .container {
-            width: 100%;
-            max-width: 500px;
-            background: white;
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
+    .chat-container {
+      width: 400px;
+      background: white;
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
 
-        .auth-bar {
-            background: white;
-            padding: 15px;
-            border-radius: 12px;
-            margin-bottom: 20px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
+    .messages {
+      height: 300px;
+      overflow-y: auto;
+      margin-bottom: 10px;
+      border: 1px solid #ddd;
+      padding: 10px;
+      border-radius: 5px;
+    }
 
-        .user-avatar {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            border: 2px solid #007bff;
-        }
+    .message {
+      margin-bottom: 8px;
+      padding: 6px 10px;
+      border-radius: 6px;
+      background: #e9e9e9;
+    }
 
-        input, select, button {
-            width: 100%;
-            padding: 12px;
-            margin: 8px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            box-sizing: border-box;
-            font-size: 14px;
-        }
+    .input-area {
+      display: flex;
+    }
 
-        button {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 12px;
-            border-radius: 6px;
-            width: 100%;
-            font-weight: 600;
-            cursor: pointer;
-        }
+    input {
+      flex: 1;
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
 
-        button:hover {
-            background: #0056b3;
-        }
+    button {
+      margin-left: 5px;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 5px;
+      background: #1976d2;
+      color: white;
+      cursor: pointer;
+    }
 
-        .message-box {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-bottom: 20px;
-            max-height: 400px;
-            overflow-y: auto;
-        }
-
-        .message-box .message {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding: 10px;
-            border-radius: 10px;
-            max-width: 80%;
-        }
-
-        .message-box .message.self {
-            background-color: #007bff;
-            color: white;
-            align-self: flex-end;
-        }
-
-        .message-box .message.other {
-            background-color: #f1f1f1;
-            color: black;
-        }
-
-        .message-box .message .avatar {
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-        }
-
-        .time {
-            font-size: 12px;
-            color: #aaa;
-            margin-left: auto;
-        }
-
-        .chat-controls {
-            display: flex;
-            gap: 10px;
-            align-items: center;
-            margin-top: 10px;
-        }
-
-        .chat-controls button {
-            width: 49%;
-        }
-
-    </style>
+    button:hover {
+      background: #125ca1;
+    }
+  </style>
 </head>
 <body>
-    <div id="authSection" class="container" style="max-width: 500px; text-align: center;">
-        <button id="loginBtn">Войти через Google</button>
-        <div id="userInfo" style="display: none;" class="auth-bar">
-            <img id="userPhoto" class="user-avatar" src="" alt="Avatar">
-            <span id="userName" style="font-weight: bold;"></span>
-            <button id="logoutBtn" class="logout-btn">Выйти</button>
-        </div>
-    </div>
 
-    <div id="messageForm" class="container" style="display: none;">
-        <h3>Чат</h3>
-        <div class="message-box" id="messageBox"></div>
-        <input type="text" id="content" placeholder="Введите сообщение">
-        <button id="sendMessageBtn">Отправить</button>
-    </div>
+<div class="chat-container">
+  <h3>Чат</h3>
+  <div class="messages" id="messages"></div>
 
-    <div id="chatControls" class="container" style="display: none;">
-        <select id="selectUser">
-            <option value="user1">Пользователь 1</option>
-            <option value="user2">Пользователь 2</option>
-        </select>
-        <button id="startChatBtn">Начать чат</button>
-    </div>
+  <div class="input-area">
+    <input type="text" id="username" placeholder="Ваше имя">
+    <input type="text" id="messageInput" placeholder="Сообщение">
+    <button onclick="sendMessage()">➤</button>
+  </div>
+</div>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-  import { getFirestore, collection, addDoc, query, orderBy, onSnapshot, serverTimestamp, updateDoc, doc, increment, where, getDocs, arrayUnion, getDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
-  import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+  import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, serverTimestamp } 
+  from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
+  // 🔴 ВСТАВЬ СЮДА СВОЙ CONFIG ИЗ FIREBASE
   const firebaseConfig = {
-  apiKey: "AIzaSyCQsBDdxkA4dWhaTM6w9_jzzmEkZbh1Y4A",
-  authDomain: "project-3574e.firebaseapp.com",
-  projectId: "project-3574e",
-  storageBucket: "project-3574e.firebasestorage.app",
-  messagingSenderId: "173194596075",
-  appId: "1:173194596075:web:27a2ba28b0adac358978ae",
-  measurementId: "G-D602P1V71T"
+    apiKey: "ТВОЙ_API_KEY",
+    authDomain: "ТВОЙ_AUTH_DOMAIN",
+    projectId: "ТВОЙ_PROJECT_ID",
+    storageBucket: "ТВОЙ_STORAGE_BUCKET",
+    messagingSenderId: "ТВОЙ_SENDER_ID",
+    appId: "ТВОЙ_APP_ID"
   };
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
-  const auth = getAuth(app);
-  const provider = new GoogleAuthProvider();
 
-  const loginBtn = document.getElementById('loginBtn');
-  const logoutBtn = document.getElementById('logoutBtn');
-  const userInfo = document.getElementById('userInfo');
-  const messageForm = document.getElementById('messageForm');
-  const chatControls = document.getElementById('chatControls');
+  const messagesDiv = document.getElementById("messages");
 
-  loginBtn.onclick = () => signInWithPopup(auth, provider);
-  logoutBtn.onclick = () => signOut(auth);
+  const q = query(collection(db, "chats/general/messages"), orderBy("createdAt"));
 
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      loginBtn.style.display = 'none';
-      userInfo.style.display = 'flex';
-      messageForm.style.display = 'block';
-      chatControls.style.display = 'block';
-      document.getElementById('userName').innerText = user.displayName;
-      document.getElementById('userPhoto').src = user.photoURL;
-    } else {
-      loginBtn.style.display = 'block';
-      userInfo.style.display = 'none';
-      messageForm.style.display = 'none';
-      chatControls.style.display = 'none';
-    }
+  onSnapshot(q, (snapshot) => {
+    messagesDiv.innerHTML = "";
+    snapshot.forEach((doc) => {
+      const data = doc.data();
+      const div = document.createElement("div");
+      div.classList.add("message");
+      div.textContent = data.username + ": " + data.text;
+      messagesDiv.appendChild(div);
+    });
+    messagesDiv.scrollTop = messagesDiv.scrollHeight;
   });
 
-  // --- Логика для чатов и отправки сообщений ---
-  const createChat = async (user1, user2, message) => {
-    const chatRef = collection(db, "chats");
-    const q = query(chatRef, where("participants", "array-contains", user1), where("participants", "array-contains", user2));
-    const querySnapshot = await getDocs(q);
+  window.sendMessage = async function() {
+    const username = document.getElementById("username").value;
+    const text = document.getElementById("messageInput").value;
 
-    if (querySnapshot.empty) {
-      await addDoc(chatRef, {
-        participants: [user1, user2],
-        messages: [{
-          senderId: user1,
-          message: message,
-          timestamp: serverTimestamp()
-        }]
-      });
-    } else {
-      const chatId = querySnapshot.docs[0].id;
-      const chatDoc = doc(db, "chats", chatId);
-      await updateDoc(chatDoc, {
-        messages: arrayUnion({
-          senderId: user1,
-          message: message,
-          timestamp: serverTimestamp()
-        })
-      });
-    }
-  };
+    if (text.trim() === "") return;
 
-  document.getElementById("sendMessageBtn").onclick = async () => {
-    const content = document.getElementById("content").value;
-    const recipientId = document.getElementById("selectUser").value;
+    await addDoc(collection(db, "chats/general/messages"), {
+      username: username || "Аноним",
+      text: text,
+      createdAt: serverTimestamp()
+    });
 
-    if (!content) return alert("Введите текст сообщения!");
-
-    try {
-      await createChat(auth.currentUser.uid, recipientId, content);
-      document.getElementById("content").value = "";  // Очищаем поле
-    } catch (e) {
-      alert("Ошибка безопасности! Проверьте правила (Rules) в Firebase.");
-    }
-  };
-
-  const getChatMessages = async (user1, user2) => {
-    const q = query(
-      collection(db, "chats"),
-      where("participants", "array-contains", user1),
-      where("participants", "array-contains", user2)
-    );
-
-    const querySnapshot = await getDocs(q);
-    if (!querySnapshot.empty) {
-      const chatId = querySnapshot.docs[0].id;
-      const chatDoc = doc(db, "chats", chatId);
-      const chatData = (await getDoc(chatDoc)).data();
-
-      const messageBox = document.getElementById('messageBox');
-      messageBox.innerHTML = "";
-      chatData.messages.forEach(message => {
-        const messageDiv = document.createElement("div");
-        messageDiv.classList.add("message");
-        messageDiv.classList.add(message.senderId === auth.currentUser.uid ? "self" : "other");
-        
-        messageDiv.innerHTML = `
-          <img class="avatar" src="${message.senderId === auth.currentUser.uid ? auth.currentUser.photoURL : 'https://via.placeholder.com/30'}" />
-          <span>${message.message}</span>
-          <span class="time">${message.timestamp.toDate().toLocaleTimeString()}</span>
-        `;
-        messageBox.appendChild(messageDiv);
-      });
-    }
-  };
-
-  const startChat = () => {
-    const recipientId = document.getElementById('selectUser').value;
-    getChatMessages(auth.currentUser.uid, recipientId);
-  };
-
-  document.getElementById("startChatBtn").onclick = startChat;
-
+    document.getElementById("messageInput").value = "";
+  }
 </script>
+
 </body>
 </html>
