--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
   import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, serverTimestamp } 
   from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  // 🔴 ВСТАВЬ СЮДА СВОЙ CONFIG ИЗ FIREBASE
   const firebaseConfig = {
-    apiKey: "ТВОЙ_API_KEY",
-    authDomain: "ТВОЙ_AUTH_DOMAIN",
-    projectId: "ТВОЙ_PROJECT_ID",
-    storageBucket: "ТВОЙ_STORAGE_BUCKET",
-    messagingSenderId: "ТВОЙ_SENDER_ID",
-    appId: "ТВОЙ_APP_ID"
+ apiKey: "AIzaSyCQsBDdxkA4dWhaTM6w9_jzzmEkZbh1Y4A",
+  authDomain: "project-3574e.firebaseapp.com",
+  projectId: "project-3574e",
+  storageBucket: "project-3574e.firebasestorage.app",
+  messagingSenderId: "173194596075",
+  appId: "1:173194596075:web:27a2ba28b0adac358978ae",
+  measurementId: "G-D602P1V71T"
   };
 
   const app = initializeApp(firebaseConfig);
