--- a/index.html
+++ b/index.html
@@ -3,32 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Firebase Chat</title>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
+
   <style>
     body {
       font-family: Arial;
       background: #f2f2f2;
       display: flex;
       justify-content: center;
-      padding-top: 50px;
+      padding-top: 40px;
     }
 
-    .chat-container {
-      width: 400px;
+    .container {
+      width: 500px;
       background: white;
       border-radius: 10px;
       padding: 15px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
+    select, input, button {
+      padding: 8px;
+      margin: 5px 0;
+    }
+
     .messages {
       height: 300px;
       overflow-y: auto;
-      margin-bottom: 10px;
       border: 1px solid #ddd;
       padding: 10px;
       border-radius: 5px;
+      margin-bottom: 10px;
     }
 
     .message {
@@ -38,40 +42,43 @@
       background: #e9e9e9;
     }
 
-    .input-area {
-      display: flex;
+    .my {
+      background: #1976d2;
+      color: white;
+      text-align: right;
     }
 
-    input {
-      flex: 1;
-      padding: 8px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
+    .input-area {
+      display: flex;
+      gap: 5px;
     }
 
     button {
-      margin-left: 5px;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 5px;
       background: #1976d2;
       color: white;
+      border: none;
+      border-radius: 5px;
       cursor: pointer;
-    }
-
-    button:hover {
-      background: #125ca1;
     }
   </style>
 </head>
 <body>
 
-<div class="chat-container">
+<div class="container">
   <h3>Чат</h3>
+
+  <input type="text" id="myName" placeholder="Ваше имя">
+
+  <label>Выберите собеседника:</label>
+  <select id="receiver">
+    <option value="Алмас">Алмас</option>
+    <option value="Аружан">Аружан</option>
+    <option value="Данияр">Данияр</option>
+  </select>
+
   <div class="messages" id="messages"></div>
 
   <div class="input-area">
-    <input type="text" id="username" placeholder="Ваше имя">
     <input type="text" id="messageInput" placeholder="Сообщение">
     <button onclick="sendMessage()">➤</button>
   </div>
@@ -96,29 +103,62 @@
   const db = getFirestore(app);
 
   const messagesDiv = document.getElementById("messages");
+  const receiverSelect = document.getElementById("receiver");
 
-  const q = query(collection(db, "chats/general/messages"), orderBy("createdAt"));
+  let unsubscribe = null;
 
-  onSnapshot(q, (snapshot) => {
-    messagesDiv.innerHTML = "";
-    snapshot.forEach((doc) => {
-      const data = doc.data();
-      const div = document.createElement("div");
-      div.classList.add("message");
-      div.textContent = data.username + ": " + data.text;
-      messagesDiv.appendChild(div);
+  function getChatId(user1, user2) {
+    return [user1, user2].sort().join("_");
+  }
+
+  function loadMessages() {
+    const myName = document.getElementById("myName").value;
+    const receiver = receiverSelect.value;
+
+    if (!myName) return;
+
+    const chatId = getChatId(myName, receiver);
+
+    if (unsubscribe) unsubscribe();
+
+    const q = query(
+      collection(db, "chats", chatId, "messages"),
+      orderBy("createdAt")
+    );
+
+    unsubscribe = onSnapshot(q, (snapshot) => {
+      messagesDiv.innerHTML = "";
+      snapshot.forEach((doc) => {
+        const data = doc.data();
+        const div = document.createElement("div");
+        div.classList.add("message");
+
+        if (data.username === myName) {
+          div.classList.add("my");
+        }
+
+        div.textContent = data.username + ": " + data.text;
+        messagesDiv.appendChild(div);
+      });
+
+      messagesDiv.scrollTop = messagesDiv.scrollHeight;
     });
-    messagesDiv.scrollTop = messagesDiv.scrollHeight;
-  });
+  }
+
+  receiverSelect.addEventListener("change", loadMessages);
+  document.getElementById("myName").addEventListener("change", loadMessages);
 
   window.sendMessage = async function() {
-    const username = document.getElementById("username").value;
+    const myName = document.getElementById("myName").value;
+    const receiver = receiverSelect.value;
     const text = document.getElementById("messageInput").value;
 
-    if (text.trim() === "") return;
+    if (!myName || !text) return;
 
-    await addDoc(collection(db, "chats/general/messages"), {
-      username: username || "Аноним",
+    const chatId = getChatId(myName, receiver);
+
+    await addDoc(collection(db, "chats", chatId, "messages"), {
+      username: myName,
       text: text,
       createdAt: serverTimestamp()
     });
